<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.search.SearchDetailFragment">


    <ImageView
        android:id="@+id/plantImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_plant_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/plantKrName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="산세베리아"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plantEnName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sansevieria trifasciata"
                    android:textColor="@color/grey"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/mgmtLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="초보자"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/main" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="다육형"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/main" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/SEASRCH_DETAIL_LINEAR_STYLE">

                <ImageView
                    android:id="@+id/ic_doc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_doc" />

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionText" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/round_rectangle"
                android:backgroundTint="@color/light_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/SEASRCH_DETAIL_LINEAR_STYLE">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_water_drop" />

                <TextView
                    android:id="@+id/humidityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidityText" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/round_rectangle"
                android:backgroundTint="@color/light_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/SEASRCH_DETAIL_LINEAR_STYLE">

                <ImageView
                    android:id="@+id/ic_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_temp" />

                <TextView
                    android:id="@+id/tempText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempText" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/round_rectangle"
                android:backgroundTint="@color/light_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/SEASRCH_DETAIL_LINEAR_STYLE">

                <ImageView
                    android:id="@+id/ic_care"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_care" />

                <TextView
                    android:id="@+id/tipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipText" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/round_rectangle"
                android:backgroundTint="@color/light_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/SEASRCH_DETAIL_LINEAR_STYLE">

                <ImageView
                    android:id="@+id/ic_sunny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_sun" />

                <TextView
                    android:id="@+id/placeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeText" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/round_rectangle"
                android:backgroundTint="@color/light_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/insect"
            style="@style/SEASRCH_DETAIL_LINEAR_STYLE">

            <ImageView
                android:id="@+id/ic_bug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_bugs" />

            <TextView
                android:id="@+id/insectInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insectInfoText" />

        </LinearLayout>

        <Button
            android:id="@+id/againBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="뒤로 가기" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/MAIN_BTN"
            android:text="식물 등록하기" />


    </LinearLayout>
</LinearLayout>